syntax = "proto3";
option java_package = "io.github.dayeshing.apiface.serializer";
option java_outer_classname = "GeneralTagSerializer";

message GeneralTag {
	string tagName = 1;
	string value = 2;
}