syntax = "proto3";
option java_package = "com.daysh.apiface.serializer";
option java_outer_classname = "MethodMarkSerializer";
import "ParamMark.proto";
import "GeneralTag.proto";

message MethodMark {
	string name = 1;
	string desc = 2;
	repeated GeneralTag docTags = 3;
	repeated ParamMark params = 4;
}